--- a/nmt_with_attention_jp.ipynb
+++ b/nmt_with_attention_jp.ipynb
@@ -172,7 +172,7 @@
       "source": [
         "# ファイルのダウンロード\n",
         "path_to_zip = tf.keras.utils.get_file(\n",
-        "    'spa-eng.zip', origin='http://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip',\n",
+        "    'jpn-eng.zip', origin='http://www.manythings.org/anki/jpn-eng.zip',\n",
         "    extract=True)\n",
         "\n",
         "path_to_file = os.path.dirname(path_to_zip)+\"/spa-eng/spa.txt\""
