Colaboratory を使用して作成しました

--- a/nmt_with_attention_jp.ipynb
+++ b/nmt_with_attention_jp.ipynb
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "tnxXKDjq3jEL"
       },
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "kRVATYOgJs1b",
         "colab": {
@@ -187,8 +187,8 @@
         "  ct =0\n",
         "  for line in file:\n",
         "    ct = ct +1\n",
-        "    if len(line) > 200:\n",
-        "      print(line.replace('\\t', ' ') )\n",
+        "    #if len(line) > 200:\n",
+        "      #print(line.replace('\\t', ' ') )\n",
         "  print(ct)"
       ],
       "metadata": {
@@ -198,7 +198,7 @@
         "id": "_uQf9VDkd-jC",
         "outputId": "8a01b6d2-4d83-4ca5-811d-b362481cbe38"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
