Colaboratory を使用して作成しました

--- a/nmt_with_attention_jp.ipynb
+++ b/nmt_with_attention_jp.ipynb
@@ -151,21 +151,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "kRVATYOgJs1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a14ccf2e-b0be-4144-fc56-32a1845ca1e8"
+        "outputId": "4cc0283e-edc1-4e4a-c086-01a4aa09ac5b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from http://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip\n",
-            "2638744/2638744 [==============================] - 1s 0us/step\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Archive:  jpn-eng.zip\n",
+            "  inflating: jpn.txt                 \n",
+            "  inflating: _about.txt              \n",
+            "/content\n"
           ]
         }
       ],
@@ -177,9 +180,11 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "!cp \"/content/drive/My Drive/work/jpg-eng.zip\" .\n",
+        "!cp \"/content/drive/MyDrive/work/jpn-eng.zip\" .\n",
         "\n",
-        "path_to_file = os.path.dirname(path_to_zip)+\"/spa-eng/spa.txt\""
+        "!unzip jpn-eng.zip\n",
+        "!pwd\n",
+        "path_to_file=\"/content/jpn.txt\""
       ]
     },
     {
