Colaboratory を使用して作成しました

--- a/nmt_with_attention_jp.ipynb
+++ b/nmt_with_attention_jp.ipynb
@@ -1688,7 +1688,7 @@
         }
       ],
       "source": [
-        "translate(u'esta es mi vida.')"
+        "translate(u'医療データを学習させます')"
       ]
     },
     {
@@ -1733,7 +1733,7 @@
         }
       ],
       "source": [
-        "translate(u'¿todavia estan en casa?')"
+        "translate(u'下腿浮腫の原因は？')"
       ]
     },
     {
