Colaboratory を使用して作成しました

--- a/nmt_with_attention_jp.ipynb
+++ b/nmt_with_attention_jp.ipynb
@@ -258,8 +258,8 @@
         }
       ],
       "source": [
-        "en_sentence = u\"下腿浮腫の原因は?\"\n",
-        "sp_sentence = u\"¿Puedo tomar prestado este libro?\"\n",
+        "sp_sentence = u\"下腿浮腫の原因は?\"\n",
+        "en_sentence = u\"¿Puedo tomar prestado este libro?\"\n",
         "print(preprocess_sentence(en_sentence))\n",
         "print(preprocess_sentence(sp_sentence).encode('utf-8'))"
       ]
