--- a/nmt_with_attention_jp.ipynb
+++ b/nmt_with_attention_jp.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "jmjh290raIky"
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "metadata": {
         "id": "tnxXKDjq3jEL"
       },
@@ -151,11 +151,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "kRVATYOgJs1b"
+        "id": "kRVATYOgJs1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "75ba1e9f-247b-413d-a7ed-de71df478123"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "Archive:  jpn-eng.zip\n",
+            "  inflating: jpn.txt                 \n",
+            "  inflating: _about.txt              \n",
+            "/content\n"
+          ]
+        }
+      ],
       "source": [
         "# ファイルのダウンロード\n",
         "#path_to_zip = tf.keras.utils.get_file(\n",
@@ -180,8 +196,8 @@
         "  ct =0\n",
         "  for line in file:\n",
         "    ct = ct +1\n",
-        "    #if len(line) > 200:\n",
-        "      #print(line.replace('\\t', ' ') )\n",
+        "    if ct < 10:\n",
+        "      print(line.replace('\\t', ' t ') )\n",
         "  print(ct)"
       ],
       "metadata": {
@@ -189,15 +205,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_uQf9VDkd-jC",
-        "outputId": "bc806ebd-cf81-4d72-cf25-47d57dcdceae"
+        "outputId": "391df767-3fff-4be4-bcf2-39d69c1863c0"
       },
-      "execution_count": 26,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/content/jpn.txt\n",
+            "Go. t 行け。 t CC-BY 2.0 (France) Attribution: tatoeba.org #2877272 (CM) & #7421985 (Ninja)\n",
+            "\n",
+            "Go. t 行きなさい。 t CC-BY 2.0 (France) Attribution: tatoeba.org #2877272 (CM) & #7421986 (Ninja)\n",
+            "\n",
+            "Hi. t こんにちは。 t CC-BY 2.0 (France) Attribution: tatoeba.org #538123 (CM) & #373351 (tommy_san)\n",
+            "\n",
+            "Hi. t もしもし。 t CC-BY 2.0 (France) Attribution: tatoeba.org #538123 (CM) & #385517 (mookeee)\n",
+            "\n",
+            "Hi. t やっほー。 t CC-BY 2.0 (France) Attribution: tatoeba.org #538123 (CM) & #3480285 (arnab)\n",
+            "\n",
+            "Hi. t こんにちは！ t CC-BY 2.0 (France) Attribution: tatoeba.org #538123 (CM) & #3480287 (arnab)\n",
+            "\n",
+            "Run. t 走れ。 t CC-BY 2.0 (France) Attribution: tatoeba.org #4008918 (JSakuragi) & #5955868 (tatoebane)\n",
+            "\n",
+            "Run. t 走って！ t CC-BY 2.0 (France) Attribution: tatoeba.org #4008918 (JSakuragi) & #5955869 (tatoebane)\n",
+            "\n",
+            "Who? t 誰？ t CC-BY 2.0 (France) Attribution: tatoeba.org #2083030 (CK) & #638666 (arihato)\n",
+            "\n",
             "101200\n"
           ]
         }
@@ -205,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 5,
       "metadata": {
         "id": "rd0jw-eC3jEh"
       },
@@ -239,21 +273,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 6,
       "metadata": {
         "id": "opI2GzOt479E",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07347ce1-132f-43ea-a26d-e9e78abb2a32"
+        "outputId": "2c71c6d1-50c4-4102-dab7-e531256063d7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<start> may i borrow this book ? <end>\n",
-            "b'<start> \\xc2\\xbf puedo tomar prestado este libro ? <end>'\n"
+            "<start> ¿puedo tomar prestado este libro? <end>\n",
+            "b'<start> \\xe4\\xb8\\x8b\\xe8\\x85\\xbf\\xe6\\xb5\\xae\\xe8\\x85\\xab\\xe3\\x81\\xae\\xe5\\x8e\\x9f\\xe5\\x9b\\xa0\\xe3\\x81\\xaf? <end>'\n"
           ]
         }
       ],
@@ -266,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 7,
       "metadata": {
         "id": "OHn4Dct23jEm"
       },
@@ -285,14 +319,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 8,
       "metadata": {
         "id": "cTbSbBz55QtF",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236
         },
-        "outputId": "610f8b30-8183-463f-d30c-7055d238da86"
+        "outputId": "49cb7a33-5b42-4a44-8f27-bf27d734c796"
       },
       "outputs": [
         {
@@ -302,7 +336,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-30-4f7dc8483541>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0men\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_to_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0men\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-4f7dc8483541>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0men\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_to_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0men\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
           ]
         }
